# hyp3-cookiecutter

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
.github/workflows/: changelog.yml  create-jira-issue.yml  labeled-pr.yml  release.yml  render-cookiecutter.yml  static-analysis.yml  tag-version.yml  update_actions_version.yml
hooks/: pre_gen_project.py
{{cookiecutter.__project_name}}/: CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
{{cookiecutter.__project_name}}/.github/workflows/: build.yml  changelog.yml  labeled-pr.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml  test.yml
{{cookiecutter.__project_name}}/src/{{cookiecutter.__package_name}}/: __init__.py  __main__.py  process.py
{{cookiecutter.__project_name}}/src/{{cookiecutter.__package_name}}/etc/: entrypoint.sh
{{cookiecutter.__project_name}}/tests/: test_entrypoints.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO  conda-env.yml  environment.yml  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_name}}/.github/PULL_REQUEST_TEMPLATE/: release.md
{{cookiecutter.project_name}}/.github/workflows/: changelog.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml
{{cookiecutter.project_name}}/.gitlab/: gitleaks.toml  merge_back.gitlab-ci.yaml
{{cookiecutter.project_name}}/.gitlab/issue_templates/: default.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  process.py
{{cookiecutter.project_name}}/tests/: test_entrypoints.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  process.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/etc/: entrypoint.sh
{{cookiecutter.project_slug}}/: CHANGELOG.md  README.md
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: default.md
