[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__package_name }}"
requires-python = ">=3.10"
authors = [
    {name="{{ cookiecutter.github_username }}", email="{{ cookiecutter.github_email }}"},
]
description = "{{ cookiecutter.short_description }}"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hyp3lib>=3,<4",
    # insert python dependencies as list here
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "flake8",
    "flake8-import-order",
    "flake8-blind-except",
    "flake8-builtins",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
]

[project.urls]
Homepage = "{{ cookiecutter.public_url }}"
Documentation = "https://hyp3-docs.asf.alaska.edu"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
